# Hook-DirectInput

./: .gitignore  CMakeLists.txt  README.md  hook.sln  vcpkg.json
hook/: hook.vcxproj  main.cpp
libhook/: APIHook.cpp  APIHook.h  hook.cpp  hook.h  libhook.vcxproj  libhook.vcxproj.filters
source/: CMakeLists.txt
source/dll/: CMakeLists.txt
source/dll/src/: hook_api.cpp  hook_api.h  main.cpp
source/dll/src/utils/: SharedComPtr.hpp  Vtable.hpp
